// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sidebar site with undefined sidebar 1`] = `
{
  "defaultSidebar": [
    {
      "id": "hello-1",
      "type": "doc",
    },
    {
      "className": "front-matter-class-name",
      "customProps": {
        "custom": "from front matter",
      },
      "id": "hello-2",
      "label": "Hello 2 From Doc",
      "type": "doc",
    },
  ],
}
`;

exports[`sidebar site with wrong sidebar content 1`] = `
"Invalid sidebar file at "packages/docusaurus-plugin-content-docs/src/__tests__/__fixtures__/simple-site/wrong-sidebars.json".
These sidebar document ids do not exist:
- nonExistent

Available document ids are:
- customLastUpdate
- doc with space
- doc-draft
- doc-unlisted
- foo/bar
- foo/baz
- headingAsTitle
- hello
- ipsum
- lastUpdateAuthorOnly
- lastUpdateDateOnly
- lorem
- rootAbsoluteSlug
- rootRelativeSlug
- rootResolvedSlug
- rootTryToEscapeSlug
- slugs/absoluteSlug
- slugs/relativeSlug
- slugs/resolvedSlug
- slugs/tryToEscapeSlug
- unlisted-category/unlisted-category-doc
- unlisted-category/unlisted-category-index
"
`;

exports[`simple website content 1`] = `
{
  "description": "Images",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "baz",
    "pagination_label": "baz pagination_label",
    "slug": "bazSlug.html",
    "tags": [
      "tag 1",
      "globalTag1",
      "tag-1",
      {
        "label": "tag 2",
        "permalink": "tag2-custom-permalink",
      },
    ],
    "title": "baz",
  },
  "id": "foo/baz",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/unlisted-category/",
    "title": "unlisted-category-index",
  },
  "permalink": "/docs/foo/bazSlug.html",
  "previous": {
    "permalink": "/docs/doc-unlisted",
    "title": "doc-unlisted",
  },
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/foo/bazSlug.html",
  "source": "@site/docs/foo/baz.md",
  "sourceDirName": "foo",
  "tags": [
    {
      "description": undefined,
      "inline": true,
      "label": "tag 1",
      "permalink": "/docs/tags/tag-1",
    },
    {
      "description": "Global Tag 1 description",
      "inline": false,
      "label": "Global Tag 1 label",
      "permalink": "/docs/tags/global-tag-1-permalink",
    },
    {
      "description": undefined,
      "inline": true,
      "label": "tag-1",
      "permalink": "/docs/tags/tag-1",
    },
    {
      "description": undefined,
      "inline": true,
      "label": "tag 2",
      "permalink": "/docs/tags/tag2-custom-permalink",
    },
  ],
  "title": "baz",
  "unlisted": false,
  "version": "current",
}
`;

exports[`simple website content 2`] = `
{
  "description": "Hi, Endilie here :)",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "hello",
    "sidebar_label": "Hello sidebar_label",
    "slug": "/",
    "tags": [
      "tag-1",
      "tag 3",
    ],
    "title": "Hello, World !",
  },
  "id": "hello",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/",
  "previous": {
    "permalink": "/docs/headingAsTitle",
    "title": "My heading as title",
  },
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/",
  "source": "@site/docs/hello.md",
  "sourceDirName": ".",
  "tags": [
    {
      "description": undefined,
      "inline": true,
      "label": "tag-1",
      "permalink": "/docs/tags/tag-1",
    },
    {
      "description": undefined,
      "inline": true,
      "label": "tag 3",
      "permalink": "/docs/tags/tag-3",
    },
  ],
  "title": "Hello, World !",
  "unlisted": false,
  "version": "current",
}
`;

exports[`simple website content 3`] = `
{
  "description": "This is custom description",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "description": "This is custom description",
    "id": "bar",
    "pagination_next": null,
    "pagination_prev": null,
    "title": "Bar",
  },
  "id": "foo/bar",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/foo/bar",
  "previous": undefined,
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/foo/bar",
  "source": "@site/docs/foo/bar.md",
  "sourceDirName": "foo",
  "tags": [],
  "title": "Bar",
  "unlisted": false,
  "version": "current",
}
`;

exports[`simple website content 4`] = `
{
  "docs": [
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "foo/bar",
              "type": "doc",
            },
            {
              "id": "doc-unlisted",
              "type": "doc",
            },
            {
              "id": "foo/baz",
              "type": "doc",
            },
          ],
          "label": "foo",
          "link": undefined,
          "type": "category",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "unlisted-category/unlisted-category-doc",
              "type": "doc",
            },
          ],
          "label": "Unlisted category",
          "link": {
            "id": "unlisted-category/unlisted-category-index",
            "type": "doc",
          },
          "type": "category",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "rootAbsoluteSlug",
              "type": "doc",
            },
            {
              "id": "rootRelativeSlug",
              "type": "doc",
            },
            {
              "id": "rootResolvedSlug",
              "type": "doc",
            },
            {
              "id": "rootTryToEscapeSlug",
              "type": "doc",
            },
          ],
          "label": "Slugs",
          "link": {
            "permalink": "/docs/category/slugs",
            "slug": "/category/slugs",
            "type": "generated-index",
          },
          "type": "category",
        },
        {
          "id": "headingAsTitle",
          "type": "doc",
        },
        {
          "href": "https://github.com",
          "label": "GitHub",
          "type": "link",
        },
        {
          "id": "hello",
          "type": "ref",
        },
      ],
      "label": "Test",
      "link": undefined,
      "type": "category",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`simple website content 5`] = `
{
  "pluginName": {
    "pluginId": {
      "breadcrumbs": true,
      "path": "/docs",
      "versions": [
        {
          "docs": [
            {
              "id": "customLastUpdate",
              "path": "/docs/customLastUpdate",
              "sidebar": undefined,
            },
            {
              "id": "doc with space",
              "path": "/docs/doc with space",
              "sidebar": undefined,
            },
            {
              "id": "doc-draft",
              "path": "/docs/doc-draft",
              "sidebar": undefined,
            },
            {
              "id": "doc-unlisted",
              "path": "/docs/doc-unlisted",
              "sidebar": "docs",
            },
            {
              "id": "foo/bar",
              "path": "/docs/foo/bar",
              "sidebar": "docs",
            },
            {
              "id": "foo/baz",
              "path": "/docs/foo/bazSlug.html",
              "sidebar": "docs",
            },
            {
              "id": "headingAsTitle",
              "path": "/docs/headingAsTitle",
              "sidebar": "docs",
            },
            {
              "id": "hello",
              "path": "/docs/",
              "sidebar": "docs",
            },
            {
              "id": "ipsum",
              "path": "/docs/ipsum",
              "sidebar": undefined,
            },
            {
              "id": "lastUpdateAuthorOnly",
              "path": "/docs/lastUpdateAuthorOnly",
              "sidebar": undefined,
            },
            {
              "id": "lastUpdateDateOnly",
              "path": "/docs/lastUpdateDateOnly",
              "sidebar": undefined,
            },
            {
              "id": "lorem",
              "path": "/docs/lorem",
              "sidebar": undefined,
            },
            {
              "id": "rootAbsoluteSlug",
              "path": "/docs/rootAbsoluteSlug",
              "sidebar": "docs",
            },
            {
              "id": "rootRelativeSlug",
              "path": "/docs/rootRelativeSlug",
              "sidebar": "docs",
            },
            {
              "id": "rootResolvedSlug",
              "path": "/docs/hey/rootResolvedSlug",
              "sidebar": "docs",
            },
            {
              "id": "rootTryToEscapeSlug",
              "path": "/docs/rootTryToEscapeSlug",
              "sidebar": "docs",
            },
            {
              "id": "slugs/absoluteSlug",
              "path": "/docs/absoluteSlug",
              "sidebar": undefined,
            },
            {
              "id": "slugs/relativeSlug",
              "path": "/docs/slugs/relativeSlug",
              "sidebar": undefined,
            },
            {
              "id": "slugs/resolvedSlug",
              "path": "/docs/slugs/hey/resolvedSlug",
              "sidebar": undefined,
            },
            {
              "id": "slugs/tryToEscapeSlug",
              "path": "/docs/tryToEscapeSlug",
              "sidebar": undefined,
            },
            {
              "id": "unlisted-category/unlisted-category-doc",
              "path": "/docs/unlisted-category/unlisted-category-doc",
              "sidebar": "docs",
            },
            {
              "id": "unlisted-category/unlisted-category-index",
              "path": "/docs/unlisted-category/",
              "sidebar": "docs",
            },
            {
              "id": "/category/slugs",
              "path": "/docs/category/slugs",
              "sidebar": "docs",
            },
          ],
          "draftIds": [],
          "isLast": true,
          "label": "Next",
          "mainDocId": "hello",
          "name": "current",
          "path": "/docs",
          "sidebars": {
            "docs": {
              "link": {
                "label": "foo/bar",
                "path": "/docs/foo/bar",
              },
            },
          },
        },
      ],
    },
  },
}
`;

exports[`site with custom sidebar items generator sidebar is autogenerated according to a custom sidebarItemsGenerator 1`] = `
{
  "defaultSidebar": [
    {
      "id": "API/api-overview",
      "type": "doc",
    },
    {
      "id": "API/api-end",
      "type": "doc",
    },
  ],
}
`;

exports[`site with custom sidebar items generator sidebarItemsGenerator can wrap/enhance/sort/reverse the default sidebar generator 1`] = `
{
  "defaultSidebar": [
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "API/api-end",
          "type": "doc",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "API/Extension APIs/Theme API",
              "type": "doc",
            },
            {
              "id": "API/Extension APIs/Plugin API",
              "type": "doc",
            },
          ],
          "label": "Extension APIs (label from _category_.yml)",
          "link": undefined,
          "type": "category",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "API/Core APIs/Server API",
              "type": "doc",
            },
            {
              "id": "API/Core APIs/Client API",
              "type": "doc",
            },
          ],
          "label": "Core APIs",
          "link": undefined,
          "type": "category",
        },
        {
          "id": "API/api-overview",
          "type": "doc",
        },
      ],
      "label": "API (label from _category_.json)",
      "link": undefined,
      "type": "category",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "Guides/guide5",
          "type": "doc",
        },
        {
          "id": "Guides/guide4",
          "type": "doc",
        },
        {
          "id": "Guides/guide3",
          "type": "doc",
        },
        {
          "id": "Guides/guide2.5",
          "type": "doc",
        },
        {
          "id": "Guides/guide2",
          "type": "doc",
        },
        {
          "id": "Guides/guide1",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
    {
      "id": "installation",
      "type": "doc",
    },
    {
      "id": "getting-started",
      "type": "doc",
    },
  ],
}
`;

exports[`site with custom sidebar items generator sidebarItemsGenerator is called with appropriate data 1`] = `
{
  "categoriesMetadata": {
    "3-API": {
      "label": "API (label from _category_.json)",
    },
    "3-API/02_Extension APIs": {
      "label": "Extension APIs (label from _category_.yml)",
    },
    "Guides": {
      "position": 2,
    },
  },
  "defaultSidebarItemsGenerator": [Function],
  "docs": [
    {
      "frontMatter": {},
      "id": "API/Core APIs/Client API",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/01_Core APIs/0 --- Client API.md",
      "sourceDirName": "3-API/01_Core APIs",
      "title": "Client API",
    },
    {
      "frontMatter": {},
      "id": "API/Core APIs/Server API",
      "sidebarPosition": 1,
      "source": "@site/docs/3-API/01_Core APIs/1 --- Server API.md",
      "sourceDirName": "3-API/01_Core APIs",
      "title": "Server API",
    },
    {
      "frontMatter": {},
      "id": "API/Extension APIs/Plugin API",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/02_Extension APIs/0. Plugin API.md",
      "sourceDirName": "3-API/02_Extension APIs",
      "title": "Plugin API",
    },
    {
      "frontMatter": {},
      "id": "API/Extension APIs/Theme API",
      "sidebarPosition": 1,
      "source": "@site/docs/3-API/02_Extension APIs/1. Theme API.md",
      "sourceDirName": "3-API/02_Extension APIs",
      "title": "Theme API",
    },
    {
      "frontMatter": {},
      "id": "API/api-end",
      "sidebarPosition": 3,
      "source": "@site/docs/3-API/03_api-end.md",
      "sourceDirName": "3-API",
      "title": "API End",
    },
    {
      "frontMatter": {},
      "id": "API/api-overview",
      "sidebarPosition": 0,
      "source": "@site/docs/3-API/00_api-overview.md",
      "sourceDirName": "3-API",
      "title": "API Overview",
    },
    {
      "frontMatter": {
        "id": "guide1",
        "sidebar_position": 1,
      },
      "id": "Guides/guide1",
      "sidebarPosition": 1,
      "source": "@site/docs/Guides/z-guide1.md",
      "sourceDirName": "Guides",
      "title": "Guide 1",
    },
    {
      "frontMatter": {
        "id": "guide2",
      },
      "id": "Guides/guide2",
      "sidebarPosition": 2,
      "source": "@site/docs/Guides/02-guide2.md",
      "sourceDirName": "Guides",
      "title": "Guide 2",
    },
    {
      "frontMatter": {
        "id": "guide2.5",
        "sidebar_position": 2.5,
      },
      "id": "Guides/guide2.5",
      "sidebarPosition": 2.5,
      "source": "@site/docs/Guides/0-guide2.5.md",
      "sourceDirName": "Guides",
      "title": "Guide 2.5",
    },
    {
      "frontMatter": {
        "id": "guide3",
        "sidebar_position": 3,
      },
      "id": "Guides/guide3",
      "sidebarPosition": 3,
      "source": "@site/docs/Guides/guide3.md",
      "sourceDirName": "Guides",
      "title": "Guide 3",
    },
    {
      "frontMatter": {
        "id": "guide4",
      },
      "id": "Guides/guide4",
      "sidebarPosition": undefined,
      "source": "@site/docs/Guides/a-guide4.md",
      "sourceDirName": "Guides",
      "title": "Guide 4",
    },
    {
      "frontMatter": {
        "id": "guide5",
      },
      "id": "Guides/guide5",
      "sidebarPosition": undefined,
      "source": "@site/docs/Guides/b-guide5.md",
      "sourceDirName": "Guides",
      "title": "Guide 5",
    },
    {
      "frontMatter": {},
      "id": "getting-started",
      "sidebarPosition": 0,
      "source": "@site/docs/0-getting-started.md",
      "sourceDirName": ".",
      "title": "Getting Started",
    },
    {
      "frontMatter": {},
      "id": "installation",
      "sidebarPosition": 1,
      "source": "@site/docs/1-installation.md",
      "sourceDirName": ".",
      "title": "Installation",
    },
  ],
  "isCategoryIndex": [Function],
  "item": {
    "dirName": ".",
    "type": "autogenerated",
  },
  "numberPrefixParser": [Function],
  "version": {
    "contentPath": "docs",
    "versionName": "current",
  },
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 1`] = `
{
  "description": "Getting started text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "getting-started",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/installation",
    "title": "Installation",
  },
  "permalink": "/docs/getting-started",
  "previous": undefined,
  "sidebar": "defaultSidebar",
  "sidebarPosition": 0,
  "slug": "/getting-started",
  "source": "@site/docs/0-getting-started.md",
  "sourceDirName": ".",
  "tags": [],
  "title": "Getting Started",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 2`] = `
{
  "description": "Installation text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "installation",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide1",
    "title": "Guide 1",
  },
  "permalink": "/docs/installation",
  "previous": {
    "permalink": "/docs/getting-started",
    "title": "Getting Started",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 1,
  "slug": "/installation",
  "source": "@site/docs/1-installation.md",
  "sourceDirName": ".",
  "tags": [],
  "title": "Installation",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 3`] = `
{
  "description": "Guide 1 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide1",
    "sidebar_position": 1,
  },
  "id": "Guides/guide1",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide2",
    "title": "Guide 2",
  },
  "permalink": "/docs/Guides/guide1",
  "previous": {
    "permalink": "/docs/installation",
    "title": "Installation",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 1,
  "slug": "/Guides/guide1",
  "source": "@site/docs/Guides/z-guide1.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 1",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 4`] = `
{
  "description": "Guide 2 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide2",
  },
  "id": "Guides/guide2",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide2.5",
    "title": "Guide 2.5",
  },
  "permalink": "/docs/Guides/guide2",
  "previous": {
    "permalink": "/docs/Guides/guide1",
    "title": "Guide 1",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 2,
  "slug": "/Guides/guide2",
  "source": "@site/docs/Guides/02-guide2.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 2",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 5`] = `
{
  "description": "Guide 2.5 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide2.5",
    "sidebar_position": 2.5,
  },
  "id": "Guides/guide2.5",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide3",
    "title": "Guide 3",
  },
  "permalink": "/docs/Guides/guide2.5",
  "previous": {
    "permalink": "/docs/Guides/guide2",
    "title": "Guide 2",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 2.5,
  "slug": "/Guides/guide2.5",
  "source": "@site/docs/Guides/0-guide2.5.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 2.5",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 6`] = `
{
  "description": "Guide 3 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide3",
    "sidebar_position": 3,
  },
  "id": "Guides/guide3",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide4",
    "title": "Guide 4",
  },
  "permalink": "/docs/Guides/guide3",
  "previous": {
    "permalink": "/docs/Guides/guide2.5",
    "title": "Guide 2.5",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 3,
  "slug": "/Guides/guide3",
  "source": "@site/docs/Guides/guide3.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 3",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 7`] = `
{
  "description": "Guide 4 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide4",
  },
  "id": "Guides/guide4",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/Guides/guide5",
    "title": "Guide 5",
  },
  "permalink": "/docs/Guides/guide4",
  "previous": {
    "permalink": "/docs/Guides/guide3",
    "title": "Guide 3",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": undefined,
  "slug": "/Guides/guide4",
  "source": "@site/docs/Guides/a-guide4.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 4",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 8`] = `
{
  "description": "Guide 5 text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "id": "guide5",
  },
  "id": "Guides/guide5",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/api-overview",
    "title": "API Overview",
  },
  "permalink": "/docs/Guides/guide5",
  "previous": {
    "permalink": "/docs/Guides/guide4",
    "title": "Guide 4",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": undefined,
  "slug": "/Guides/guide5",
  "source": "@site/docs/Guides/b-guide5.md",
  "sourceDirName": "Guides",
  "tags": [],
  "title": "Guide 5",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 9`] = `
{
  "description": "API Overview text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/api-overview",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Core APIs/Client API",
    "title": "Client API",
  },
  "permalink": "/docs/API/api-overview",
  "previous": {
    "permalink": "/docs/Guides/guide5",
    "title": "Guide 5",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 0,
  "slug": "/API/api-overview",
  "source": "@site/docs/3-API/00_api-overview.md",
  "sourceDirName": "3-API",
  "tags": [],
  "title": "API Overview",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 10`] = `
{
  "description": "Client API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Core APIs/Client API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Core APIs/Server API",
    "title": "Server API",
  },
  "permalink": "/docs/API/Core APIs/Client API",
  "previous": {
    "permalink": "/docs/API/api-overview",
    "title": "API Overview",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 0,
  "slug": "/API/Core APIs/Client API",
  "source": "@site/docs/3-API/01_Core APIs/0 --- Client API.md",
  "sourceDirName": "3-API/01_Core APIs",
  "tags": [],
  "title": "Client API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 11`] = `
{
  "description": "Server API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Core APIs/Server API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Extension APIs/Plugin API",
    "title": "Plugin API",
  },
  "permalink": "/docs/API/Core APIs/Server API",
  "previous": {
    "permalink": "/docs/API/Core APIs/Client API",
    "title": "Client API",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 1,
  "slug": "/API/Core APIs/Server API",
  "source": "@site/docs/3-API/01_Core APIs/1 --- Server API.md",
  "sourceDirName": "3-API/01_Core APIs",
  "tags": [],
  "title": "Server API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 12`] = `
{
  "description": "Plugin API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Extension APIs/Plugin API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Extension APIs/Theme API",
    "title": "Theme API",
  },
  "permalink": "/docs/API/Extension APIs/Plugin API",
  "previous": {
    "permalink": "/docs/API/Core APIs/Server API",
    "title": "Server API",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 0,
  "slug": "/API/Extension APIs/Plugin API",
  "source": "@site/docs/3-API/02_Extension APIs/0. Plugin API.md",
  "sourceDirName": "3-API/02_Extension APIs",
  "tags": [],
  "title": "Plugin API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 13`] = `
{
  "description": "Theme API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Extension APIs/Theme API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/api-end",
    "title": "API End",
  },
  "permalink": "/docs/API/Extension APIs/Theme API",
  "previous": {
    "permalink": "/docs/API/Extension APIs/Plugin API",
    "title": "Plugin API",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 1,
  "slug": "/API/Extension APIs/Theme API",
  "source": "@site/docs/3-API/02_Extension APIs/1. Theme API.md",
  "sourceDirName": "3-API/02_Extension APIs",
  "tags": [],
  "title": "Theme API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar docs in fully generated sidebar have correct metadata 14`] = `
{
  "description": "API End text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/api-end",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/API/api-end",
  "previous": {
    "permalink": "/docs/API/Extension APIs/Theme API",
    "title": "Theme API",
  },
  "sidebar": "defaultSidebar",
  "sidebarPosition": 3,
  "slug": "/API/api-end",
  "source": "@site/docs/3-API/03_api-end.md",
  "sourceDirName": "3-API",
  "tags": [],
  "title": "API End",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with full autogenerated sidebar sidebar is fully autogenerated 1`] = `
{
  "defaultSidebar": [
    {
      "id": "getting-started",
      "type": "doc",
    },
    {
      "id": "installation",
      "type": "doc",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "Guides/guide1",
          "type": "doc",
        },
        {
          "id": "Guides/guide2",
          "type": "doc",
        },
        {
          "id": "Guides/guide2.5",
          "type": "doc",
        },
        {
          "id": "Guides/guide3",
          "type": "doc",
        },
        {
          "id": "Guides/guide4",
          "type": "doc",
        },
        {
          "id": "Guides/guide5",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "link": undefined,
      "type": "category",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "API/api-overview",
          "type": "doc",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "API/Core APIs/Client API",
              "type": "doc",
            },
            {
              "id": "API/Core APIs/Server API",
              "type": "doc",
            },
          ],
          "label": "Core APIs",
          "link": undefined,
          "type": "category",
        },
        {
          "collapsed": true,
          "collapsible": true,
          "items": [
            {
              "id": "API/Extension APIs/Plugin API",
              "type": "doc",
            },
            {
              "id": "API/Extension APIs/Theme API",
              "type": "doc",
            },
          ],
          "label": "Extension APIs (label from _category_.yml)",
          "link": undefined,
          "type": "category",
        },
        {
          "id": "API/api-end",
          "type": "doc",
        },
      ],
      "label": "API (label from _category_.json)",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`site with partial autogenerated sidebars 2 (fix #4638) sidebar is partially autogenerated 1`] = `
{
  "someSidebar": [
    {
      "id": "API/api-end",
      "type": "doc",
    },
    {
      "id": "API/api-overview",
      "type": "doc",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "API/Core APIs/Client API",
          "type": "doc",
        },
        {
          "id": "API/Core APIs/Server API",
          "type": "doc",
        },
      ],
      "label": "Core APIs",
      "link": undefined,
      "type": "category",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "API/Extension APIs/Plugin API",
          "type": "doc",
        },
        {
          "id": "API/Extension APIs/Theme API",
          "type": "doc",
        },
      ],
      "label": "Extension APIs (label from _category_.yml)",
      "link": undefined,
      "type": "category",
    },
    {
      "id": "API/api-end",
      "type": "doc",
    },
  ],
}
`;

exports[`site with partial autogenerated sidebars docs in partially generated sidebar have correct metadata 1`] = `
{
  "description": "API End text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/api-end",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/api-overview",
    "title": "API Overview",
  },
  "permalink": "/docs/API/api-end",
  "previous": undefined,
  "sidebar": "someSidebar",
  "sidebarPosition": 3,
  "slug": "/API/api-end",
  "source": "@site/docs/3-API/03_api-end.md",
  "sourceDirName": "3-API",
  "tags": [],
  "title": "API End",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with partial autogenerated sidebars docs in partially generated sidebar have correct metadata 2`] = `
{
  "description": "API Overview text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/api-overview",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Extension APIs/Plugin API",
    "title": "Plugin API",
  },
  "permalink": "/docs/API/api-overview",
  "previous": {
    "permalink": "/docs/API/api-end",
    "title": "API End",
  },
  "sidebar": "someSidebar",
  "sidebarPosition": 0,
  "slug": "/API/api-overview",
  "source": "@site/docs/3-API/00_api-overview.md",
  "sourceDirName": "3-API",
  "tags": [],
  "title": "API Overview",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with partial autogenerated sidebars docs in partially generated sidebar have correct metadata 3`] = `
{
  "description": "Plugin API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Extension APIs/Plugin API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/API/Extension APIs/Theme API",
    "title": "Theme API",
  },
  "permalink": "/docs/API/Extension APIs/Plugin API",
  "previous": {
    "permalink": "/docs/API/api-overview",
    "title": "API Overview",
  },
  "sidebar": "someSidebar",
  "sidebarPosition": 0,
  "slug": "/API/Extension APIs/Plugin API",
  "source": "@site/docs/3-API/02_Extension APIs/0. Plugin API.md",
  "sourceDirName": "3-API/02_Extension APIs",
  "tags": [],
  "title": "Plugin API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with partial autogenerated sidebars docs in partially generated sidebar have correct metadata 4`] = `
{
  "description": "Theme API text",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "API/Extension APIs/Theme API",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/API/Extension APIs/Theme API",
  "previous": {
    "permalink": "/docs/API/Extension APIs/Plugin API",
    "title": "Plugin API",
  },
  "sidebar": "someSidebar",
  "sidebarPosition": 1,
  "slug": "/API/Extension APIs/Theme API",
  "source": "@site/docs/3-API/02_Extension APIs/1. Theme API.md",
  "sourceDirName": "3-API/02_Extension APIs",
  "tags": [],
  "title": "Theme API",
  "unlisted": false,
  "version": "current",
}
`;

exports[`site with partial autogenerated sidebars sidebar is partially autogenerated 1`] = `
{
  "someSidebar": [
    {
      "id": "API/api-end",
      "type": "doc",
    },
    {
      "collapsed": true,
      "collapsible": true,
      "items": [
        {
          "id": "API/api-overview",
          "type": "doc",
        },
        {
          "id": "API/Extension APIs/Plugin API",
          "type": "doc",
        },
        {
          "id": "API/Extension APIs/Theme API",
          "type": "doc",
        },
      ],
      "label": "Some category",
      "link": undefined,
      "type": "category",
    },
  ],
}
`;

exports[`versioned website (community) content 1`] = `
{
  "description": "Team current version (translated)",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "title": "Team title translated",
  },
  "id": "team",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/community/next/team",
  "previous": undefined,
  "sidebar": "community",
  "sidebarPosition": undefined,
  "slug": "/team",
  "source": "@site/i18n/en/docusaurus-plugin-content-docs-community/current/team.md",
  "sourceDirName": ".",
  "tags": [],
  "title": "Team title translated",
  "unlisted": false,
  "version": "current",
}
`;

exports[`versioned website (community) content 2`] = `
{
  "description": "Team 1.0.0",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "team",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/community/team",
  "previous": undefined,
  "sidebar": "community",
  "sidebarPosition": undefined,
  "slug": "/team",
  "source": "@site/community_versioned_docs/version-1.0.0/team.md",
  "sourceDirName": ".",
  "tags": [],
  "title": "team",
  "unlisted": false,
  "version": "1.0.0",
}
`;

exports[`versioned website content 1`] = `
{
  "description": "This is next version of bar.",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "slug": "barSlug",
    "tags": [
      "barTag 1",
      "barTag-2",
      {
        "label": "barTag 3",
        "permalink": "barTag-3-permalink",
      },
    ],
  },
  "id": "foo/bar",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/next/",
    "title": "hello",
  },
  "permalink": "/docs/next/foo/barSlug",
  "previous": undefined,
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/foo/barSlug",
  "source": "@site/docs/foo/bar.md",
  "sourceDirName": "foo",
  "tags": [
    {
      "description": undefined,
      "inline": true,
      "label": "barTag 1",
      "permalink": "/docs/next/tags/bar-tag-1",
    },
    {
      "description": undefined,
      "inline": true,
      "label": "barTag-2",
      "permalink": "/docs/next/tags/bar-tag-2",
    },
    {
      "description": undefined,
      "inline": true,
      "label": "barTag 3",
      "permalink": "/docs/next/tags/barTag-3-permalink",
    },
  ],
  "title": "bar",
  "unlisted": false,
  "version": "current",
}
`;

exports[`versioned website content 2`] = `
{
  "description": "Bar 1.0.1 !",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "foo/bar",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/",
    "title": "hello",
  },
  "permalink": "/docs/foo/bar",
  "previous": undefined,
  "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
  "sidebarPosition": undefined,
  "slug": "/foo/bar",
  "source": "@site/versioned_docs/version-1.0.1/foo/bar.md",
  "sourceDirName": "foo",
  "tags": [],
  "title": "bar",
  "unlisted": false,
  "version": "1.0.1",
}
`;

exports[`versioned website content 3`] = `
{
  "description": "Hello next !",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "slug": "/",
  },
  "id": "hello",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/next/",
  "previous": {
    "permalink": "/docs/next/foo/barSlug",
    "title": "bar",
  },
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/",
  "source": "@site/docs/hello.md",
  "sourceDirName": ".",
  "tags": [],
  "title": "hello",
  "unlisted": false,
  "version": "current",
}
`;

exports[`versioned website content 4`] = `
{
  "description": "Hello 1.0.1 !",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {
    "slug": "/",
    "tags": [
      "inlineTag-v1.0.1",
      "globalTag-v1.0.1",
    ],
  },
  "id": "hello",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": undefined,
  "permalink": "/docs/",
  "previous": {
    "permalink": "/docs/foo/bar",
    "title": "bar",
  },
  "sidebar": "VersionedSideBarNameDoesNotMatter/docs",
  "sidebarPosition": undefined,
  "slug": "/",
  "source": "@site/versioned_docs/version-1.0.1/hello.md",
  "sourceDirName": ".",
  "tags": [
    {
      "description": undefined,
      "inline": true,
      "label": "inlineTag-v1.0.1",
      "permalink": "/docs/tags/inline-tag-v-1-0-1",
    },
    {
      "description": "globalTag-v1.0.1 description",
      "inline": false,
      "label": "globalTag-v1.0.1 label",
      "permalink": "/docs/tags/globalTag-v1.0.1 permalink",
    },
  ],
  "title": "hello",
  "unlisted": false,
  "version": "1.0.1",
}
`;

exports[`versioned website content 5`] = `
{
  "description": "Baz 1.0.0 ! This will be deleted in next subsequent versions.",
  "draft": false,
  "editUrl": undefined,
  "frontMatter": {},
  "id": "foo/baz",
  "lastUpdatedAt": undefined,
  "lastUpdatedBy": undefined,
  "next": {
    "permalink": "/docs/1.0.0/",
    "title": "hello",
  },
  "permalink": "/docs/1.0.0/foo/baz",
  "previous": {
    "permalink": "/docs/1.0.0/foo/barSlug",
    "title": "bar",
  },
  "sidebar": "docs",
  "sidebarPosition": undefined,
  "slug": "/foo/baz",
  "source": "@site/versioned_docs/version-1.0.0/foo/baz.md",
  "sourceDirName": "foo",
  "tags": [],
  "title": "baz",
  "unlisted": false,
  "version": "1.0.0",
}
`;
